chore: Worked on classes page
