# server/internal/route/stats.go
@@ -18,4 +18,5 @@ func NewStatsRoute(app bootstrap.Application, routerGroup *gin.RouterGroup) {
 	routerGroup.GET("/stats/room", statsController.GetRoomStats)
 	routerGroup.GET("/stats/student", statsController.GetStudentStats)
 	routerGroup.GET("/stats/teacher", statsController.GetTeacherStats)
+	routerGroup.GET("/stats/class", statsController.GetClassStats)
 }
